[package]
name = "nv1-hub-ui-tester"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics = "0.8.1"
nv1-hub-ui = { path = "../nv1-hub-ui" }
embedded-graphics-simulator = { version = "0.6.0", optional = true }
anyhow = "1.0.86"

[features]
ui_debug = ["embedded-graphics-simulator"]
no_std = ["nv1-hub-ui/no_std"]
default = ["ui_debug"]
