[package]
name = "nv1-hub-ui-tester"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
no_std = ["nv1-hub-ui/no_std"]
defeault = ["no_std"]

[dependencies]


[target.'cfg(target_arch = "x86_64")'.dependencies]
embedded-graphics = "0.8.1"
nv1-hub-ui = { path = "../nv1-hub-ui" }
embedded-graphics-simulator = "0.6.0"
sdl2 = { version = "^0.35.2", features = ["bundled"] }
anyhow = "1.0.86"
